--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <script type="module" src="./js/index.mjs" defer></script>
     <title>Tic tac toe</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+      <main id="game-board"></main>
+    </div>
   </body>
 </html>
