Fully working app

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
           <input type="text" id="player-two" name="player-two" placeholder="Mariano" />
           <button class="start" type="submit" disabled>Start</button>
         </form>
-        <button class="reset">Reset Game</button>
+        <button class="reset game">Reset Game</button>
+        <button class="rounds">Reset rounds</button>
         <img class="form-logo" src="./public/tic-tac-toe-svgrepo-com.svg" width="200px" alt="" />
       </aside>
     </div>
