--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <script type="module" src="./js/algo.mjs" defer></script>
+    <script src="./js/index.js" defer></script>
     <title>Tic tac toe</title>
   </head>
   <body>
@@ -28,7 +28,7 @@
           <input type="text" id="player-one" name="player-one" placeholder="Lucas" />
           <label for="player-two">Player 2: O</label>
           <input type="text" id="player-two" name="player-two" placeholder="Mariano" />
-          <button class="start" type="submit" disabled>Start</button>
+          <button class="start" type="submit" disabled>Change Names</button>
         </form>
         <button class="reset game">Reset Game</button>
         <button class="rounds">Reset rounds</button>
